<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <ImageView
        android:id="@+id/img_new_auction_item"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/image_view_border"
        android:contentDescription="@string/pic_new_auction_item"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_add_black_24dp_3"
        android:layout_marginLeft="@dimen/dp_margin_default_value"
        android:layout_marginRight="@dimen/dp_margin_default_value"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="90dp" />

    <EditText
        android:id="@+id/txt_new_auction_item_name"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_new_auction_item_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/lbl_new_auction_item_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lbl_new_auction_item_name"
        android:paddingLeft="85dp"
        android:paddingStart="85dp"
        tools:ignore="RtlSymmetry"
        android:background="@drawable/sh_text_edit_background_2"
        android:textColor="@color/app_desc_text_color"
        android:layout_marginLeft="@dimen/dp_margin_default_value"
        android:layout_marginRight="@dimen/dp_margin_default_value"/>

    <EditText
        android:id="@+id/txt_new_auction_item_start_price"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:digits="0123456789"
        android:ems="10"
        android:hint="@string/hint_new_auction_item_start_price"
        android:inputType="phone|number"
        app:layout_constraintBottom_toBottomOf="@+id/lbl_new_auction_item_start_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lbl_new_auction_item_start_price"
        android:paddingLeft="85dp"
        android:paddingStart="85dp"
        tools:ignore="RtlSymmetry"
        android:background="@drawable/sh_text_edit_background_2"
        android:textColor="@color/app_desc_text_color"
        android:layout_marginLeft="@dimen/dp_margin_default_value"
        android:layout_marginRight="@dimen/dp_margin_default_value"/>

    <EditText
        android:id="@+id/txt_new_auction_item_increment"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:digits="0123456789"
        android:ems="10"
        android:hint="@string/hint_new_auction_item_increment"
        android:inputType="phone|number"
        app:layout_constraintBottom_toBottomOf="@+id/lbl_new_auction_item_increment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lbl_new_auction_item_increment"
        android:paddingLeft="85dp"
        android:paddingStart="85dp"
        tools:ignore="RtlSymmetry"
        android:background="@drawable/sh_text_edit_background_2"
        android:textColor="@color/app_desc_text_color"
        android:layout_marginLeft="@dimen/dp_margin_default_value"
        android:layout_marginRight="@dimen/dp_margin_default_value"/>

    <EditText
        android:id="@+id/txt_new_auction_item_desc"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_new_auction_item_desc"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/lbl_new_auction_item_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lbl_new_auction_item_desc"
        android:paddingLeft="85dp"
        android:paddingStart="85dp"
        tools:ignore="RtlSymmetry"
        android:background="@drawable/sh_text_edit_background_2"
        android:textColor="@color/app_desc_text_color"
        android:layout_marginLeft="@dimen/dp_margin_default_value"
        android:layout_marginRight="@dimen/dp_margin_default_value"/>

    <TextView
        android:id="@+id/lbl_new_auction_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_new_auction_item_name"
        android:textColor="@color/app_desc_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/lbl_new_auction_item_start_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_new_auction_item_start_price"
        android:textColor="@color/app_desc_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.30" />

    <TextView
        android:id="@+id/lbl_new_auction_item_increment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_new_auction_item_increment"
        android:textColor="@color/app_desc_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.48" />

    <TextView
        android:id="@+id/lbl_new_auction_item_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_new_auction_item_desc"
        android:textColor="@color/app_desc_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.66" />

    <LinearLayout
        android:id="@+id/btn_submit_lot_item"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/colorPrimary"
        tools:ignore="MissingConstraints"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:contentDescription="@string/button_text_save"
            app:srcCompat="@drawable/ic_save_black_24dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorPrimary"
            android:textSize="40sp"
            android:text="@string/button_text_save"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>