...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="60dp" />

    <ImageButton
        android:id="@+id/btn_recycle_view_add_item"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/sh_add_list_item_radius"
        android:contentDescription="@string/btn_add_bidder_tips"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
