<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyo_auction_lot_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/dp_margin_default_value"
    android:layout_marginTop="@dimen/dp_margin_default_value"
    android:layout_marginRight="@dimen/dp_margin_default_value"
    android:background="@color/list_item_background_color">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="100dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lyo_auction_lot_list_item_panel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="700dp"
            app:layout_constraintGuide_end="700dp"
            app:layout_constraintGuide_percent="0.32" />

        <ImageView
            android:id="@+id/pic_auction_lot_list_item_picture"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/pic_auction_lot_list_item_picture_tips"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline9"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?attr/selectableItemBackground"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/lbl_auction_lot_list_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".99"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/lbl_auction_lot_list_item_name"
            android:textSize="24sp"
            android:textColor="@color/textColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toStartOf="@+id/guideline9"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/lbl_auction_lot_list_item_start_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="5"
            android:text="@string/lbl_auction_lot_list_item_start_price"
            android:textSize="38sp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toStartOf="@+id/guideline9"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.800" />

        <TextView
            android:id="@+id/lbl_auction_lot_list_item_increment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_auction_lot_list_item_increment"
            android:textSize="24sp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.164"
            app:layout_constraintStart_toEndOf="@+id/lbl_auction_lot_list_item_start_price"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.764" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lyo_auction_lot_list_item_menus"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lyo_auction_lot_list_item_panel"
        android:background="@drawable/sh_list_item_optional_border_radius">

        <ImageButton
            android:id="@+id/btn_auction_lot_list_item_del"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/sh_del_list_item_radius"
            android:contentDescription="@string/btn_auction_lot_list_item_del_tips"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.98"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_clear_white_24dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>